--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,10 @@
 </head>
 
 <body>
+    <noscript>PLEASE ENABLE JAVASCRIPT TO VIEW SITE!!!</noscript>
+    
     <div id="app"></div>
+    <div id="sidebar-root"></div>
 </body>
 
 </html>
