Stop Heart Attack over git rebase FAIL

--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,16 @@
 
 <head>
     <title>node-ethernet-ip</title>
+    <link rel="shortcut icon" href="https://i.imgur.com/x44wdL8.png" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css" integrity="sha384-v2Tw72dyUXeU3y4aM2Y0tBJQkGfplr39mxZqlTBDUZAb9BGoC40+rdFCG0m10lXk"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/fontawesome.css" integrity="sha384-q3jl8XQu1OpdLgGFvNRnPdj5VIlCvgsDQTQB6owSOHWlAurxul7f+JpUOVdAiJ5P"
+        crossorigin="anonymous">
 </head>
 
 <body>
     <noscript>PLEASE ENABLE JAVASCRIPT TO VIEW SITE!!!</noscript>
-    
+
     <div id="app"></div>
     <div id="sidebar-root"></div>
 </body>
